Rename UI project; Created event data object; Created .NET Standard library for the event hub sender.

--- a/CoffeeMachineSimulator/CoffeeMachine.UI.csproj
+++ b/CoffeeMachineSimulator/CoffeeMachine.UI.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoffeeMachine.EventHub.Sender\CoffeeMachine.EventHub.Sender.csproj" />
+  </ItemGroup>
+
 </Project>
