--- a/CoffeeMachine.EventHub.Sender/CoffeeMachine.EventHub.Sender.csproj
+++ b/CoffeeMachine.EventHub.Sender/CoffeeMachine.EventHub.Sender.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Messaging.EventHubs" Version="5.6.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
