Created model project; Convert event data to CoffeeMachineData

--- a/CoffeeMachine.EventHub.Sender/CoffeeMachine.EventHub.Sender.csproj
+++ b/CoffeeMachine.EventHub.Sender/CoffeeMachine.EventHub.Sender.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoffeeMachine.EventHub.Model\CoffeeMachine.EventHub.Model.csproj" />
+  </ItemGroup>
+
 </Project>
