--- a/CoffeeMachine.EventHub.Receiver.Direct/CoffeeMachine.EventHub.Receiver.Direct.csproj
+++ b/CoffeeMachine.EventHub.Receiver.Direct/CoffeeMachine.EventHub.Receiver.Direct.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoffeeMachine.EventHub.Model\CoffeeMachine.EventHub.Model.csproj" />
+  </ItemGroup>
+
 </Project>
